# backtester

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.cursor/plans/: engine_time_frame_filtering_8bf6cad9.plan.md  web_ui_implementation_d432a9c5.plan.md
apps/webui/: README.md  pyproject.toml
apps/webui/src/backtest_webui/: __init__.py  api.py  schemas.py
apps/webui/static/: app.js  styles.css
src/backtest/: CLI.py  __init__.py  api.py  data_loader.py  engine.py  metrics.py  plotting.py  portfolio.py
