[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backtest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bokeh>=3.8.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "yfinance>=0.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/backtest"]
