[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backtest-webui"
version = "0.1.0"
description = "Web UI for the backtest portfolio library"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "backtest",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "pydantic>=2.10.0",
]

[project.scripts]
backtest-webui = "backtest_webui.api:main"

[tool.hatch.build.targets.wheel]
packages = ["src/backtest_webui"]

[tool.uv.sources]
backtest = { path = "../..", editable = true }

